<resources>
    <string name="app_name">petMedi</string>
    <string name="you_have_3_items_in_your_list_cart">You have 3 Items in your list cart</string>
    <string name="personal_data">Personal Data</string>
    <string name="email">Email</string>
    <string name="aaronjj_gmail_com">Aaronjj@gmail.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="_07754875125">07754875125</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="december_20_1998">December 20,1998</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="save_changes">Save Changes</string>
    <string name="my_cart">My Cart</string>
    <string name="nextgard_tablet">NextGard Tablet</string>
    <string name="afoxolaner_136_mg"><![CDATA[Afoxolaner >136 mg]]></string>
    <string name="puppy_meal">Puppy Meal</string>
    <string name="all_payments">All Payments</string>
    <string name="_345465">#345465</string>
    <string name="_45_78">$45.78</string>
    <string name="_4_items_2_pedigree_1_puppy_meal_1_chicken_meal">4 Items, 2 Pedigree, 1 Puppy Meal, 1 Chicken Meal</string>
    <string name="all_pets">All Pets</string>
    <string name="pet_name_tommy">Pet Name: Tommy</string>
    <string name="type_australian_terrier">Type: Australian Terrier</string>
    <string name="pet_name_frankie">Pet Name: Frankie</string>
    <string name="type_golden_retriever">Type: Golden Retriever</string>
    <string name="close_menu">Close Menu</string>
    <string name="thinuri_c">Thinuri C</string>
    <string name="my_pets">My Pets</string>
    <string name="notifications">Notifications</string>
    <string name="pet_manage">Pet Manage</string>
    <string name="profile">Profile</string>
    <string name="all_appointments">All Appointments</string>
    <string name="search_appointments">Search appointments</string>
    <string name="_9_years_of_experience">9 Years of experience</string>
    <string name="dr_john_doe">Dr. John Doe</string>
    <string name="veterinary_surgeon">Veterinary Surgeon</string>
    <string name="animal_clinic_matara">Animal Clinic Matara</string>
    <string name="date_pending">Date: Pending</string>
    <string name="monday_saturday_9_00_am_10_00_am">Monday-Saturday | 9:00 AM - 10:00 AM</string>
    <string name="dr_anne_jenn">Dr.Anne Jenn</string>
    <string name="dr_andrea_pedan">Dr.Andrea Pedan</string>
    <string name="masters_of_vetrinary_science">Masters Of Vetrinary Science</string>
    <string name="patients">Patients</string>
    <string name="_10_years">10 years</string>
    <string name="experience">Experience</string>
    <string name="rating">Rating</string>
    <string name="experienced_veterinary_consultant_amp_surgeon_with_expertise_in_veterinary_surgery_radiology_preventive_care_nutrition_wound_care_management_and_anesthesia_monitoring"><![CDATA[Experienced Veterinary Consultant & Surgeon, With expertise in Veterinary Surgery, Radiology, Preventive Care, Nutrition, Wound Care management, and Anesthesia monitoring.]]></string>
    <string name="book_appointment">Book Appointment</string>
    <string name="hey_thinu">Hey Thinu...</string>
    <string name="your_all_in_one_companion_for_pet_health_and_happiness_track_your_pet_s_wellness_set_reminders_for_vet_visits_manage_vaccinations_monitor_diet_plans_access_expert_tips_find_nearby_pet_services_connect_with_pet_lovers_store_medical_records_and_get_personalized_care_recommendations_all_in_one_place_let_s_make_pet_care_easy_organized_and_stress_free">Your all in one companion for pet health and happiness. Track your pet’s wellness, set reminders for vet visits, manage vaccinations, monitor diet plans, access expert tips, find nearby pet services, connect with pet lovers, store medical records, and get personalized care recommendations all in one place. Let’s make pet care easy, organized, and stress-free! 🐾💙</string>
    <string name="get_start">Get Start</string>
    <string name="we_care_about">WE CARE ABOUT</string>
    <string name="your_pet">YOUR PET</string>
    <string name="track_your_pet_s_health_records_and_medical_history_in_one_place_and_book_vet_appointments_or_consult_a_vet_online_anytime">Track your pet\'s health records and medical history in one place and Book vet appointments or consult a vet online anytime</string>
    <string name="healthy_heart">Healthy heart</string>
    <string name="happier_pet">Happier pet!</string>
    <string name="order_pet_medicines_and_essentials_delivered_to_your_doorstep">Order pet medicines and essentials, delivered to your doorstep.</string>
    <string name="reliable_care">Reliable Care</string>
    <string name="for_happy_pets">For Happy Pets</string>
    <string name="providing_expert_veterinary_care_for_pets_with_love_and_dedication">Providing expert veterinary care for pets with love and dedication</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="popular_medicines">Popular Medicines</string>
    <string name="accessory">Accessory</string>
    <string name="food">Food</string>
    <string name="medicine">Medicine</string>
    <string name="doctor">Doctor</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="payment_method">Payment Method</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="my_pet">My Pet</string>
    <string name="full_name">Full Name</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_new_account">Create new account?</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_with_petmedi_to_access">Create an account with PetMedi to access</string>
    <string name="pet_healthcare_services">pet healthcare services</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account?</string>
</resources>