<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="188dp"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="364dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/v4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/reliable_care"
        android:textAlignment="center"
        android:textColor="#7089DF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/for_happy_pets"
        android:textAlignment="center"
        android:textColor="#7089DF"
        android:textSize="30sp"
        android:textStyle="bold" />





    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/providing_expert_veterinary_care_for_pets_with_love_and_dedication"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/loginButton"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/rounded_login_button"
            android:onClick="LoginClick"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/rounded_register_button"
            android:onClick="RegisterClick"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold"/>



    </LinearLayout>
</LinearLayout>