<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="188dp"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="364dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/v2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_care_about"
        android:textAlignment="center"
        android:textColor="#7089DF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/your_pet"
        android:textAlignment="center"
        android:textColor="#7089DF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/track_your_pet_s_health_records_and_medical_history_in_one_place_and_book_vet_appointments_or_consult_a_vet_online_anytime"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/firstPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_button"
        android:onClick="onMainLayoutClick"
        android:text="Next"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

</LinearLayout>