<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <!-- Sidebar -->
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"

        android:backgroundTint="#C5F1F8"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Close Icon -->
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:contentDescription="@string/close_menu"
            android:padding="4dp"
            android:src="@drawable/v42"
            android:onClick="onCloseClick"
            />

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/v41"
            android:scaleType="centerCrop"
             />

        <!-- User Name -->
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="18dp"
            android:text="@string/thinuri_c"
            android:textSize="22dp"
            android:textStyle="bold" />

        <!-- Navigation Menu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Home -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:onClick="homeonClick"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/v43" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="Home"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- My Pets -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:onClick="mypetClick"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/v44" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/my_pets"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Notifications -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:onClick="onClickNotification"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/v45" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/notifications"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Payments -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:onClick="onClickPayment"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/v46" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="Payments"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Pet Manage -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:onClick="petManageClick"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/v47" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/pet_manage"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Profile -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:onClick="profileonClick"
                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/v51" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/profile"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
